PDFBOX-5660: add allowlist
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/branches/2.0@1937226 13f79535-47bb-0310-9956-ffa450edef68